--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@capacitor-community/barcode-scanner": "^4.0.1",
     "@capacitor/android": "^5.0.3",
+    "@capacitor/browser": "^5.0.2",
     "@capacitor/core": "^5.0.3",
-    "capacitor-plugin-dynamsoft-barcode-reader": "^1.3.11",
-    "capacitor-qrscanner": "^0.0.2",
+    "is-url": "^1.2.4",
     "konsta": "^2.0.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3",
+    "@types/is-url": "^1.2.30",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
